--- a/main.ppt/cromwell1.tex
+++ b/main.ppt/cromwell1.tex
@@ -21,16 +21,15 @@ and Handcuff graph}
 	
 \end{frame}
 
-\begin{frame}{Determinant of the cromwell matrices of Knot}
+\begin{frame}{Determinants of the cromwell matrices of Knot}
 	\begin{thm}
 		Let $K$ be a knot. Then the determinant of a cromwell matrix of $K$ is $0$ or $\pm 2$.
 	\end{thm}
 	\mypf
-	\begin{tabu}{X[5c]X[2c]X[5c]X[c]X[2c]}
+	\begin{tabu}{X[5c]X[2c]X[5c]X[c]}
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{trefoilimage.png}} &
 			$\xmapsto{\text{grid diagram}}$ &
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/gridtheta.png}} &
-			$\xmapsto{Cromwell}$ &
 	\end{tabu}
 	\begin{tabu}{X[c]X[1.5c]X[5c]X[c]X[5c]}
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/white.png}} &
@@ -52,7 +51,7 @@ and Handcuff graph}
 			\end{bmatrix}$
 	\end{tabu}
 \end{frame}
-\begin{frame}
+\begin{frame}{Proof of Theorem}
 	\begin{enumerate}
 		\item[\mybf{CASE 1.}] \mybf{When $n$ is an even number.}
 	\end{enumerate}
@@ -140,9 +139,9 @@ and Handcuff graph}
 	
 \end{frame}
 
-\begin{frame}{Determinant of the THC-cromwell matrices}
+\begin{frame}{Determinants of the THC-cromwell matrices}
 	\begin{thm}
-		Let $M$ be any THC-cromwell matrice of $\theta$-curve or handcuff graph. \\
+		Let $M$ be a THC-cromwell matrice of $\theta$-curve or handcuff graph. \\
 		\begin{itemize}
 			\item det*($M$) = $\pm1$ $\iff$ $M$ represents $\theta$-curve
 			\item det*($M$) = $0$ or $\pm2$ $\iff$ $M$ represents handcuff graph
@@ -166,7 +165,7 @@ and Handcuff graph}
 	\end{tabu}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Proof of Theorem}
 	\begin{enumerate}
 		\item[\mybf{CASE 1.}] \mybf{When $M$ represents $\theta$-curve}
 	\end{enumerate}
@@ -181,7 +180,7 @@ and Handcuff graph}
 	\end{center}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Proof of Theorem}
 	\begin{enumerate}
 		\item[\mybf{CASE 1.}] \mybf{When $M$ represents $\theta$-curve}
 	\end{enumerate}
@@ -206,7 +205,6 @@ and Handcuff graph}
 			\textcolor{RoyalBlue}{1} & 0 & 0 & \textcolor{RoyalBlue}{1} & 0\\
 		\end{bmatrix}$ &
 	\end{tabu} \\
-	and simplify with
 	\begin{tabu}{X[c]X[5c]X[c]X[5c]}
 		$\xmapsto[operations]{row/column}$ &
 		$\begin{bmatrix}
@@ -228,7 +226,7 @@ and Handcuff graph}
 	So det($M$) = $\pm1$
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Proof of Theorem}
 	\begin{enumerate}
 		\item[\mybf{CASE 1.}] \mybf{When $M$ represents $\theta$-curve}
 	\end{enumerate}
@@ -253,7 +251,6 @@ and Handcuff graph}
 			\textcolor{RoyalBlue}{1} & 0 & \textcolor{RoyalBlue}{1} & \textcolor{RoyalBlue}{1} & 0\\
 		\end{bmatrix}$ &
 	\end{tabu} \\
-	and simplify with
 	\begin{tabu}{X[c]X[5c]X[c]X[5c]}
 		$\xmapsto[operations]{row/column}$ &
 		$\begin{bmatrix}
