--- a/main.ppt/cromwell2.tex
+++ b/main.ppt/cromwell2.tex
@@ -1,4 +1,4 @@
-\begin{frame}
+\begin{frame}{Proof of Theorem}
 	\begin{enumerate}
 		\item[\mybf{CASE 2.}] \mybf{When $M$ represents handcuff graph}
 	\end{enumerate}
@@ -18,7 +18,8 @@
 			\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/T-loop.png}} 
 	\end{tabu}
 \end{frame}
-\begin{frame}
+
+\begin{frame}{Proof of Theorem}
 	\begin{enumerate}
 		\item[\mybf{CASE 2.}] \mybf{When $M$ represents handcuff graph}
 	\end{enumerate}
@@ -42,7 +43,6 @@
 			 \textcolor{RoyalBlue}{1}& 0 & \textcolor{RoyalBlue}{1} \\
 		\end{bmatrix}$ &
 	\end{tabu} \\
-	and simplify with
 	\begin{tabu}{X[c]X[2c]X[c]X[3c]}
 		$\xmapsto[operations]{row/column}$ &
 		$\begin{bmatrix}
@@ -58,7 +58,8 @@
 	\end{tabu}
 	So det($M$) = 0 or $\pm2$
 \end{frame}
-\begin{frame}
+
+\begin{frame}{Proof of Theorem}
 	\begin{enumerate}
 		\item[\mybf{CASE 2.}] \mybf{When $M$ represents handcuff graph}
 	\end{enumerate}
@@ -85,7 +86,6 @@
 			\textcolor{RoyalBlue}{1} & 0 & 0 & 0 & \textcolor{RoyalBlue}{1} & 0\\
 			\end{bmatrix}$&
 	\end{tabu} \\
-	and simplify with
 	\begin{tabu}{X[c]X[3c]X[c]X[4c]}
 		$\xmapsto{operations}$ &
 		$\begin{bmatrix}
@@ -101,7 +101,8 @@
 	\end{tabu}
 	So det($M$) = 0 or $\pm2$
 \end{frame}
-\begin{frame}
+
+\begin{frame}{Proof of Theorem}
 	\begin{enumerate}
 		\item[\mybf{CASE 2.}] \mybf{When $M$ represents handcuff graph}
 	\end{enumerate}
