--- a/main.ppt/intro.tex
+++ b/main.ppt/intro.tex
@@ -1,16 +1,16 @@
 \section{Introduction}
-\begin{frame}{Theta-Curves}
+\begin{frame}{$\theta$-Curves}
 	\begin{itemize}
-		\item A \term{theta-curve} $T$ is a graph embedded in $S^3$,
+		\item A \term{$\theta$-curve} $T$ is a graph embedded in $S^3$,
 		which consists of two vertices $v_1$, $v_2$
 		and three edges $e_1$, $e_2$, $e_3$,
 		such that each edge joins the vertices.
 		\item A \term{constituent knot $T_{ij}$}, $1 \le i < j \le 3$, is a subgraph of $T$
 		that consists of two vertices $v_1$, $v_2$ and two edges $e_i$, $e_j$.
 		
-		\item Theta-curves are roughly classified by comparing the triples of constituent knots.
+		\item $\theta$-curves are roughly classified by comparing the triples of constituent knots.
 		
-		\item A theta-curve is said to be \term{trivial} if it can be embedded in a 2-sphere in $S^3$.
+		\item A $\theta$-curve is said to be \term{trivial} if it can be embedded in a 2-sphere in $S^3$.
 
 		$$\includegraphics[width=.8\linewidth]{theta_exe.png}$$
 	\end{itemize}
@@ -27,7 +27,7 @@
 	$$\includegraphics[width=.8\linewidth]{handcufflist.png}$$
 \end{frame}
 
-\begin{frame}{Reidemaister Moves for Theta-Curves and Handcuff Graphs}
+\begin{frame}{Reidemaister Moves for $\theta$-Curves and Handcuff Graphs}
 	\medskip
 	\begin{enumerate}
 		\item[\mybf{I.}] \quad\raisebox{-15pt}{\includegraphics[width=36pt,height=36pt]{y101}} \quad $\longleftrightarrow$ \quad \raisebox{-15pt}{\includegraphics[width=36pt,height=36pt]{y103}} \quad $\longleftrightarrow$ \quad \raisebox{-15pt}{\includegraphics[width=36pt,height=36pt]{y102}}\medskip
@@ -40,7 +40,7 @@
 
 \begin{frame}{Arc Presentation}
     \begin{itemize}
-        \item \term{Arc presentation} of a theta-curve or handcuff graph is an embedding of them.
+        \item \term{Arc presentation} of a $\theta$-curve or handcuff graph is an embedding of them.
         \item It is contained in the union of finitely many half planes (called \term{pages}).
         \item The embedding is with the common boundary line (called \term{axis}).
         \item Each vertex lies in the axis.
@@ -77,7 +77,7 @@
 
 \begin{frame}{Grid Diagram}
 	\begin{itemize}
-        \item The \term{grid diagram} of theta-curve or handcuff graph is a diagram with only vertical and horizontal strands.
+        \item The \term{grid diagram} of $\theta$-curve or handcuff graph is a diagram with only vertical and horizontal strands.
         \item (number of vertical strands) + 1 = (number of horizontal strands)
         \item At every crossing, the vertical strand crosses over the horizontal strand.
         \item No two horizontal strands are in the same row.
@@ -96,9 +96,9 @@
     \end{tabu}
 \end{frame}
 
-\begin{frame}{Arc Presentation of the Theta-Curve and Handcuff Graph}
+\begin{frame}{Arc Presentation of the $\theta$-Curve and Handcuff Graph}
 	\begin{thm}
-    Every theta-curve and handcuff graph admit a grid diagram.
+    Every $\theta$-curve and handcuff graph admit a grid diagram.
     \end{thm}
 	\mypf
     \begin{center}
@@ -112,6 +112,6 @@
     \end{tabu}
     \end{center}
     \begin{corollary}
-    Every theta-curve and handcuff graph admit a arc presentation.
+    Every $\theta$-curve and handcuff graph admit a arc presentation.
     \end{corollary}
 \end{frame}
