--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -91,7 +91,7 @@
 \input{setup-plots.tex}
 
 
-\title{The Determinant and an Arc Index of \\ Theta Curve and Handcuff-Graph}
+\title{The Determinant and an Arc Index of \\ $\theta$-Curve and Handcuff Graph}
 \author{\centerline{
 	Eunchan Cho\inst{1} \and
 	Jeongwon Shin\inst{1} \and
@@ -114,9 +114,9 @@
 	\titlepage
 \end{frame}
 
-%\include{intro.tex}
-%\include{cromwell1.tex}
-%\include{cromwell2.tex}
+\include{intro.tex}
+\include{cromwell1.tex}
+\include{cromwell2.tex}
 \include{L_Bound.tex}
 
 \begin{frame}[standout,plain]
