--- a/main.ppt/L_Bound.tex
+++ b/main.ppt/L_Bound.tex
@@ -1,4 +1,4 @@
-\section{Lower Bounds of Arc Index}
+\section{Lower and Upper Bounds of Arc Index}
 
 \begin{frame}{Lower Bounds from Constituent Knots}
 	\begin{thm}
