--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -116,7 +116,7 @@
 	\titlepage
 \end{frame}
 
-%\include{intro.tex}
+\include{intro.tex}
 %\include{cromwell1.tex}
 %\include{cromwell2.tex}
 \include{U_Bound.tex}
