--- a/main.ppt/cromwell1.tex
+++ b/main.ppt/cromwell1.tex
@@ -223,7 +223,7 @@ and Handcuff graph}
 			0 & 0 & 0 & 0 & \textcolor{red}{1}\\
 		\end{bmatrix}$ 
 	\end{tabu}
-	So det($M$) = $\pm1$
+	So det*($M$) = $\pm1$
 \end{frame}
 
 \begin{frame}{Proof of Theorem}
@@ -263,6 +263,6 @@ and Handcuff graph}
 		$\xmapsto{regioning}$ &
 		\raisebox{-1.5cm}{\includegraphics[height=3cm]{figure/regioning.png}}
 	\end{tabu}
-	So det($M$) = $\pm1$
+	So det*($M$) = $\pm1$
 \end{frame}
 
