--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -53,7 +53,7 @@
 % ====================
 
 %\title{Arc Indices of Theta-Curves and Handcuff Graphs}
-\title{\title{The Determinant and Arc Indices of \theta$-Curves and Handcuff-Graphs}}
+\title{\title{The Determinant and Arc Indices of $\theta$-Curves and Handcuff-Graphs}}
 
 
 \author{Cho, Eunchan \inst{1} \and  Shin, Jeongwon \inst{1} \and  Seo, Boyeon \inst{1} \and  Choi, Minho \inst{1} \and Kim, Hun \inst{2} \and Jin, GyoTaek \inst{3}}
@@ -204,7 +204,7 @@
   %   \end{itemize}
   % \end{block}
   \begin{block}
-  $$\mathbf{Theorem\ 2.}$
+  $\mathbf{Theorem\ 2.}$
   Let $G$ be a $\theta$-curve or handcuff graph, and the $H$ be a H-deletion matrix. Then,
   $G$ is a $\theta$-curve if and only if $\det{H} = \pm 1$, and $G$ is a handcuff graph if and only if $\det{H} = 0 \text{ or } \pm2$.
   \end{block}
