--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -53,7 +53,7 @@
 % ====================
 
 %\title{Arc Indices of Theta-Curves and Handcuff Graphs}
-\title{\title{The Determinant and Arc Indices of \theta$-Curves and Handcuff-Graphs}}
+\title{The Determinant and Arc Indices of $\theta$-Curves and Handcuff-Graphs}
 
 
 \author{Cho, Eunchan \inst{1} \and  Shin, Jeongwon \inst{1} \and  Seo, Boyeon \inst{1} \and  Choi, Minho \inst{1} \and Kim, Hun \inst{2} \and Jin, GyoTaek \inst{3}}
