--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -171,7 +171,6 @@
     \caption{H-deletion of $\theta$-curve graph $3_1$}
   \end{figure}
 
-  $\mathbf{Theorem\ 1.}$ Let $K$ be a knot. Then the determinant of a cromwell matrix of $K$ is $0$ or $\pm 2$.
   
   \end{block}
   \column{0.33\textwidth}
@@ -203,8 +202,9 @@
   %   %\item \textbf{Simple closure}: The planar projection of the stacked tangle without any nested caps
   %   \end{itemize}
   % \end{block}
-  \begin{block}
-  $$\mathbf{Theorem\ 2.}$
+  \begin{block}{}
+  $\mathbf{Theorem\ 1.}$ Let $K$ be a knot. Then the determinant of a cromwell matrix of $K$ is $0$ or $\pm 2$.
+  $\mathbf{Theorem\ 2.}$
   Let $G$ be a $\theta$-curve or handcuff graph, and the $H$ be a H-deletion matrix. Then,
   $G$ is a $\theta$-curve if and only if $\det{H} = \pm 1$, and $G$ is a handcuff graph if and only if $\det{H} = 0 \text{ or } \pm2$.
   \end{block}
