--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -117,7 +117,7 @@
 \end{frame}
 
 \include{intro.tex}
-% \include{cromwell1.tex}
+\include{cromwell1.tex}
 % \include{cromwell2.tex}
 % \include{U_Bound.tex}
 % \include{L_Bound.tex}
