--- a/main.ppt/intro.tex
+++ b/main.ppt/intro.tex
@@ -112,6 +112,6 @@
     \end{tabu}
     \end{center}
     \begin{corollary}
-    Every $\theta$-curve and handcuff graph admit a arc presentation.
+    Every $\theta$-curve and handcuff graph admit an arc presentation.
     \end{corollary}
 \end{frame}
