--- a/2025R&Eppt/intro.tex
+++ b/2025R&Eppt/intro.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-\begin{frame}{$\theta$-Curves}
+\begin{frame}{$\theta$-Curves and Handcuff Graphs}
 	\begin{itemize}
 		\item A \term{$\theta$-curve} $T$ is a graph embedded in $S^3$,
 		which consists of two vertices $v_1$, $v_2$
@@ -7,25 +7,28 @@
 		such that each edge joins the vertices.
 		\item A \term{constituent knot $T_{ij}$}, $1 \le i < j \le 3$, is a subgraph of $T$
 		that consists of two vertices $v_1$, $v_2$ and two edges $e_i$, $e_j$.
-		
-		\item $\theta$-curves are roughly classified by comparing the triples of constituent knots.
-		
-		\item A $\theta$-curve is said to be \term{trivial} if it can be embedded in a 2-sphere in $S^3$.
-
-		$$\includegraphics[width=.8\linewidth]{theta_exe.png}$$
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Handcuff Graphs}
-	\begin{itemize}
-		\item A \term{handcuff graph} H is a graph embedded in $S^3$ consisting of two vertices ($v_1$, $v_2$) and three edges ($e_1$, $e_2$, $e_3$), where $e_3$ has distinct endpoints $v_1$ and $v_2$, and $e_1$ and $e_2$ are loops based at $v_1$ and $v_2$.
+    \end{itemize}
+    \begin{itemize}
+        \item A \term{handcuff graph} H is a graph embedded in $S^3$ consisting of two vertices ($v_1$, $v_2$) and three edges ($e_1$, $e_2$, $e_3$), where $e_3$ has distinct endpoints $v_1$ and $v_2$, and $e_1$ and $e_2$ are loops based at $v_1$ and $v_2$.
         \item A \term{constituent link $H_{12}$}, is a subgraph of $H$
 		that consists of two vertices $v_1$, $v_2$ and two edges $e_1$, $e_2$.
-
 	\end{itemize}
 
-	$$\includegraphics[width=.8\linewidth]{handcufflist.png}$$
+		
+		% \item $\theta$-curves are roughly classified by comparing the triples of constituent knots.
+		
+		% \item A $\theta$-curve is said to be \term{trivial} if it can be embedded in a 2-sphere in $S^3$.
+
+		% $$\includegraphics[width=.8\linewidth]{theta_exe.png}$$
+        % $$\includegraphics[width=.8\linewidth]{handcufflist.png}$$
+
+    \begin{tabu}{X[c]X[c]}
+        \raisebox{-1cm}{\includegraphics[height=1.5cm]{theta_exe.png}} &
+        \raisebox{-1cm}{\includegraphics[height=2cm]{handcufflist.png}} \\
+    \end{tabu}
+
 \end{frame}
+
 
 % \begin{frame}{Reidemaister Moves for $\theta$-Curves and Handcuff Graphs}
 % 	\medskip
