--- a/2025R&Eppt/intro.tex
+++ b/2025R&Eppt/intro.tex
@@ -25,6 +25,7 @@
     \begin{tabu}{X[c]X[c]}
         \raisebox{-1cm}{\includegraphics[height=1.5cm]{theta_exe.png}} &
         \raisebox{-1cm}{\includegraphics[height=2cm]{handcufflist.png}} \\
+        $\theta$-Curves & Handcuff Graphs
     \end{tabu}
 
 \end{frame}
