--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -84,7 +84,7 @@
 \newcommand*{\mypf}{{\par\color{bgcolorAlt!90!fgcolor}\mybf{\textsc{Proof}}\hrulefill\par}}
 
 
-\graphicspath{{figure/}}  
+\graphicspath{{figs/}}  
 
 \input{setup-colors.tex}
 \input{setup-beamer.tex}
@@ -116,11 +116,11 @@
 	\titlepage
 \end{frame}
 
-\include{intro.tex}
+%\include{intro.tex}
 % \include{cromwell1.tex}
 % \include{cromwell2.tex}
-% \include{U_Bound.tex}
-% \include{L_Bound.tex}
+\include{U_Bound.tex}
+\include{L_Bound.tex}
 % \include{Result}
 % \include{Further Research}
 
