--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -117,10 +117,10 @@
 \end{frame}
 
 %\include{intro.tex}
-%\include{cromwell1.tex}
+\include{cromwell1.tex}
 %\include{cromwell2.tex}
-\include{U_Bound.tex}
-\include{L_Bound.tex}
+%\include{U_Bound.tex}
+%\include{L_Bound.tex}
 %\include{Result}
 %\include{Further Research}
 
