--- a/2025R&Eppt/cromwell1.tex
+++ b/2025R&Eppt/cromwell1.tex
@@ -120,7 +120,7 @@ and Handcuff graph}
 	\begin{enumerate}
 		\item[\mybf{CASE 1.}] \mybf{When $M$ represents $\theta$-curve}
 	\end{enumerate}
-	\mybfff{\circled{i} Line-shape} \\
+	\mybfff{Line-shape} \\
 	\begin{tabu}{X[5c]X[c]X[5c]X[c]X[5c]}
 			$\begin{bmatrix}
 			\textcolor{red}{0} & \textcolor{purple}{1} & \textcolor{purple}{1} & \textcolor{red}{0} & \textcolor{red}{0} & \textcolor{red}{0} & \textcolor{purple}{1}\\
