--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -116,23 +116,13 @@
 	\titlepage
 \end{frame}
 
-<<<<<<< HEAD
-%\include{intro.tex}
-% \include{cromwell1.tex}
-% \include{cromwell2.tex}
-\include{U_Bound.tex}
-\include{L_Bound.tex}
-% \include{Result}
-% \include{Further Research}
-=======
 \include{intro.tex}
 \include{cromwell1.tex}
 \include{cromwell2.tex}
 \include{U_Bound.tex}
 \include{L_Bound.tex}
-\include{Result}
-\include{Further Research}
->>>>>>> 61a1779948eae5c733a3355592b3caddfaeac2fa
+\include{Result.tex}
+\include{Further Research.tex}
 
 % \begin{frame}[standout,plain]
 % 	\TINY
