--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -116,13 +116,13 @@
 	\titlepage
 \end{frame}
 
-%\include{intro.tex}
+\include{intro.tex}
 \include{cromwell1.tex}
-%\include{cromwell2.tex}
-%\include{U_Bound.tex}
-%\include{L_Bound.tex}
-%\include{Result}
-%\include{Further Research}
+\include{cromwell2.tex}
+\include{U_Bound.tex}
+\include{L_Bound.tex}
+\include{Result}
+\include{Further Research}
 
 % \begin{frame}[standout,plain]
 % 	\TINY
