--- a/2025R&Eppt/L_Bound.tex
+++ b/2025R&Eppt/L_Bound.tex
@@ -1,5 +1,43 @@
 \section{Lower Bounds of Arc Index}
 
+\begin{frame}{Lower Bounds from Constituent Knots/Links}
+	\begin{thm}
+		Let $T$ be any $\theta$-curve
+		and $K_1$, $K_2$, $K_3$ be three constituent knots of $T$.
+		Then
+		\[
+			\alpha(T) \ge \max_{i\in\{1,2,3\}} \alpha(K_i) + 1
+		\]
+	\end{thm}
+	
+	\begin{thm}
+		Let $T$ be any $\theta$-curve
+		and $K_1$, $K_2$, $K_3$ be three constituent knots of $T$.
+		Then
+		\[
+			\centerline{$\displaystyle\alpha(T) \ge \frac12 \sum_{i=1}^3\alpha(K_i)$}
+		\]
+	\end{thm}
+\end{frame}
+
+\begin{frame}{Lower Bounds from Constituent Knots/Links}
+	\bigskip
+	\begin{thm}
+		Let $H$ be any handcuff graph, and $L$ be the constituent link of $H$.
+		If $L$ is an alternating and non-split link, then
+		\[
+			\alpha(H) \ge c(L) + 3.
+		\]
+	\end{thm}
+
+	\begin{corollary}
+		Let $H$ be any handcuff graph, and $L$ be a constituent link of $T$. If $L$ is alternating and non-split,
+		\[
+			\alpha(H) = c(L) + 3.
+		\]
+	\end{corollary}
+\end{frame}
+
 \begin{frame}{Stacked Tangle of an $\theta$-Curve}
 	\begin{tabu}{X[c,8]X[c,8]X[c,10]X[c,10]}
 		\includegraphics[width=\linewidth]{stacked_tangle.png} & \includegraphics[width=\linewidth]{stacked_tangle2.png} & \includegraphics[width=\linewidth]{stacked.png} & \includegraphics[width=\linewidth]{stacked_theta.png}\\
