--- a/FInal_Poster/main.tex
+++ b/FInal_Poster/main.tex
@@ -162,6 +162,7 @@
   \begin{block}{Classifying $\theta$-Curves and Handcuff Graphs}
   \begin{itemize}
     \item \textbf{Cromwell matrix}
+    \item \textbf{THC-Cromwell matrix} : expansion of Cromwell matrix into $\theta$-curves and handcuff graphs
     \item \textbf{H-deletion matrix}
   \end{itemize}
 
