--- a/main.ppt/main.tex
+++ b/main.ppt/main.tex
@@ -117,8 +117,8 @@
 \end{frame}
 
 \include{intro.tex}
-%\include{cromwell1.tex}
-%\include{cromwell2.tex}
+\include{cromwell1.tex}
+\include{cromwell2.tex}
 % \include{U_Bound.tex}
 % \include{L_Bound.tex}
 %\include{Result}
