--- a/2025R&Eppt/2025R&Eppt.tex
+++ b/2025R&Eppt/2025R&Eppt.tex
@@ -124,11 +124,11 @@
 \include{Result.tex}
 \include{Further Research.tex}
 
-% \begin{frame}[standout,plain]
-% 	\TINY
-% 	\bibliographystyle{apalike}
-% 	\nocite{*}
-% 	\bibliography{KnSG2024}
-% \end{frame}
+\begin{frame}[standout,plain]
+	\TINY
+	\bibliographystyle{apalike}
+	\nocite{*}
+	\bibliography{reference}
+\end{frame}
 
 \end{document}
